--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@inertiajs/vue3": "^2.2.6",
         "@tailwindcss/postcss": "^4.1.14",
         "@vitejs/plugin-vue": "^6.0.1",
+        "lodash": "^4.17.21",
         "postcss": "^8.5.6",
         "vue": "^3.5.22"
     }
